<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report"
    android:padding="17dp">
    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/reportTitle"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textColor="@color/teal_700"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txtMethod"
        android:text="@string/method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="33dp"
        app:layout_constraintTop_toBottomOf="@id/reportTitle"
        android:textColor="#B71C1C"/>

    <TextView
        android:id="@+id/txtAmount"
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginEnd="33dp"
        app:layout_constraintTop_toBottomOf="@id/reportTitle"
        android:textColor="#B71C1C"/>

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reportView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/txtMethod"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>